moved to folders for mvvm model

--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -7,4 +7,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Convertes\" />
+    <Folder Include="ValidationRules\" />
+  </ItemGroup>
+
 </Project>
