--- a/WpfApp1/WpfApp1 - Backup.csproj
+++ b/WpfApp1/WpfApp1 - Backup.csproj
@@ -5,16 +5,13 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>Assets\bomb.ico</ApplicationIcon>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="Assets\bomb.ico" />
-  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Convertes\" />
     <Folder Include="ValidationRules\" />
+	  <Folder Include="Assets\" />
+	  <Resource Include="Assets/bomb.png" />
   </ItemGroup>
 
 </Project>
